--- a/package.json
+++ b/package.json
@@ -25,11 +25,14 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@reduxjs/toolkit": "^2.0.1",
+    "axios": "^1.6.3",
+    "axios-retry": "^4.0.0",
     "flutterwave-react-native": "^1.0.4",
     "immer": "^10.0.2",
     "lottie-react-native": "^6.2.0",
     "react": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-device-info": "^10.12.0",
     "react-native-document-picker": "^9.0.1",
     "react-native-dotenv": "^3.4.9",
     "react-native-flash-message": "^0.4.2",
@@ -50,6 +53,7 @@
     "react-native-ui-lib": "^7.12.0",
     "react-native-vector-icons": "^10.0.0",
     "react-native-webview": "^13.6.3",
+    "react-query": "^3.39.3",
     "react-redux": "^9.0.2",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0",
