--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "flutterwave-react-native": "^1.0.4",
     "immer": "^10.0.2",
     "lottie-react-native": "^6.2.0",
+    "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-device-info": "^10.12.0",
