--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-async-storage/async-storage": "^1.19.3",
     "@react-native-community/blur": "^4.3.2",
     "@react-native-community/geolocation": "^3.1.0",
+    "@react-native-community/netinfo": "^11.2.1",
     "@react-native-firebase/app": "^18.7.1",
     "@react-native-firebase/auth": "^18.7.1",
     "@react-native-firebase/firestore": "^18.7.1",
