--- a/package.json
+++ b/package.json
@@ -28,12 +28,12 @@
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.3",
     "axios-retry": "^4.0.0",
-    "flutterwave-react-native": "^1.0.4",
     "immer": "^10.0.2",
     "lottie-react-native": "^6.2.0",
     "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-blob-util": "^0.19.6",
     "react-native-device-info": "^10.12.0",
     "react-native-document-picker": "^9.0.1",
     "react-native-dotenv": "^3.4.9",
@@ -45,6 +45,8 @@
     "react-native-linear-gradient": "^2.8.2",
     "react-native-pager-view": "^6.2.3",
     "react-native-phone-call": "^1.2.0",
+    "react-native-phone-number-input": "^2.1.0",
+    "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-reanimated": "^3.6.1",
     "react-native-rename": "^3.2.13",
     "react-native-safe-area-context": "^4.7.2",
